side menu fixed

--- a/about.html
+++ b/about.html
@@ -151,7 +151,7 @@
                                             <li class="headerarea__common__dropdown"><a
                                                     class="headerarea__has__dropdown" href="service.html">Services
                                                     <i class="icofont-long-arrow-down"></i></a>
-                                                    <ul
+                                                <ul
                                                     class="headerarea__submenu headerarea__submenu--five--wrap service-scrollbar">
 
                                                     <li><a href="webdevelopment.html">Web Development</a></li>
@@ -229,10 +229,6 @@
             </div>
         </header>
         <!-- header start -->
-
-
-
-
         <!-- Start Offcanvas header menu -->
         <div class="offcanvas__header">
             <div class="offcanvas__inner">
@@ -252,12 +248,37 @@
                             <ul class="offcanvas__sub_menu">
                                 <li class="offcanvas__sub_menu_li"><a href="blog.html"
                                         class="offcanvas__sub_menu_item">Blog</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="blog-details.html"
+                                        class="offcanvas__sub_menu_item">Blog Details</a></li>
                                 <li class="offcanvas__sub_menu_li"><a href="project.html"
                                         class="offcanvas__sub_menu_item">Projects</a></li>
-                                <li class="offcanvas__sub_menu_li"><a href="service.html"
-                                        class="offcanvas__sub_menu_item">Service</a></li>
-                                <li class="offcanvas__sub_menu_li"><a href="team.html"
-                                        class="offcanvas__sub_menu_item">Team</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="project-details.html"
+                                        class="offcanvas__sub_menu_item">Project Details</a></li>
+                            </ul>
+                        </li>
+                        <li class="offcanvas__menu_li">
+                            <a class="offcanvas__menu_item" href="service.html">Services</a>
+                            <ul class="offcanvas__sub_menu">
+                                <li class="offcanvas__sub_menu_li"><a href="webdevelopment.html"
+                                        class="offcanvas__sub_menu_item">Web Development</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="software.html"
+                                        class="offcanvas__sub_menu_item">Software Development</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="appdevelop.html"
+                                        class="offcanvas__sub_menu_item">App Development</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="GameDevelop.html"
+                                        class="offcanvas__sub_menu_item">Game Development</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="digtalmarketing.html"
+                                        class="offcanvas__sub_menu_item">Digtal Marketing</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="uidesign.html"
+                                        class="offcanvas__sub_menu_item">UI/UX Designer</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="itexpert.html"
+                                        class="offcanvas__sub_menu_item">IT Specialist</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="wordpress.html"
+                                        class="offcanvas__sub_menu_item">WordPress Development</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="Content_Creater.html"
+                                        class="offcanvas__sub_menu_item">Content Creater</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="seo.html"
+                                        class="offcanvas__sub_menu_item">Search Engine Optimization(SEO)</a></li>
                             </ul>
                         </li>
                         <li class="offcanvas__menu_li"><a class="offcanvas__menu_item" href="about.html">About</a></li>
