--- a/index-onepage.html
+++ b/index-onepage.html
@@ -145,8 +145,8 @@
                                             <li class="headerarea__common__dropdown"><a
                                                     class="headerarea__has__dropdown" href="service.html">Services
                                                     <i class="icofont-long-arrow-down"></i></a>
-                                              
-                                                    <ul
+
+                                                <ul
                                                     class="headerarea__submenu headerarea__submenu--five--wrap service-scrollbar">
 
                                                     <li><a href="webdevelopment.html">Web Development</a></li>
@@ -188,7 +188,7 @@
                             <div class="headerarea__component">
                                 <div class="headerarea__right">
 
-                                    
+
                                     <div class="headerarea__button">
                                         <a class="default__button" href="request.html">GET FREE QUATE</a>
                                     </div>
@@ -232,39 +232,57 @@
             <div class="offcanvas__inner">
                 <div class="offcanvas__logo">
                     <a class="offcanvas__logo_link" href="index.html">
-                        <img src="assets/img/logo/Logo_2.png" alt="Logo-img">
+                        <img src="assets/img/logo/icon.svg" alt="Logo-img">
                     </a>
-                    <button class="offcanvas__close--btn" data-offcanvas>close</button>
+                    <button class="offcanvas__close--btn" data-offcanvas>Close</button>
                 </div>
                 <nav class="offcanvas__menu">
                     <ul class="offcanvas__menu_ul">
-                        <li class="offcanvas__menu_li"><a class="offcanvas__menu_item" href="#tb__home">HOME </a></li>
-                        <li class="offcanvas__menu_li"><a class="offcanvas__menu_item" href="#tb__service">SERVICE </a>
+                        <li class="offcanvas__menu_li">
+                            <a class="offcanvas__menu_item" href="index.html">Home</a>
                         </li>
-                        <li class="offcanvas__menu_li"><a class="offcanvas__menu_item" href="#tb__about">ABOUT </a></li>
-                        <li class="offcanvas__menu_li"><a class="offcanvas__menu_item" href="#tb__projects">PROJECTS
-                            </a></li>
-                        <li class="offcanvas__menu_li"><a class="offcanvas__menu_item" href="#tb__blogs">BLOGS </a></li>
-                        <li class="offcanvas__menu_li"><a class="offcanvas__menu_item" href="#tb__contact">CONTACT </a>
+                        <li class="offcanvas__menu_li">
+                            <a class="offcanvas__menu_item" href="#">Pages</a>
+                            <ul class="offcanvas__sub_menu">
+                                <li class="offcanvas__sub_menu_li"><a href="blog.html"
+                                        class="offcanvas__sub_menu_item">Blog</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="blog-details.html"
+                                        class="offcanvas__sub_menu_item">Blog Details</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="project.html"
+                                        class="offcanvas__sub_menu_item">Projects</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="project-details.html"
+                                        class="offcanvas__sub_menu_item">Project Details</a></li>
+                            </ul>
+                        </li>
+                        <li class="offcanvas__menu_li">
+                            <a class="offcanvas__menu_item" href="service.html">Services</a>
+                            <ul class="offcanvas__sub_menu">
+                                <li class="offcanvas__sub_menu_li"><a href="webdevelopment.html"
+                                        class="offcanvas__sub_menu_item">Web Development</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="software.html"
+                                        class="offcanvas__sub_menu_item">Software Development</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="appdevelop.html"
+                                        class="offcanvas__sub_menu_item">App Development</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="GameDevelop.html"
+                                        class="offcanvas__sub_menu_item">Game Development</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="digtalmarketing.html"
+                                        class="offcanvas__sub_menu_item">Digtal Marketing</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="uidesign.html"
+                                        class="offcanvas__sub_menu_item">UI/UX Designer</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="itexpert.html"
+                                        class="offcanvas__sub_menu_item">IT Specialist</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="wordpress.html"
+                                        class="offcanvas__sub_menu_item">WordPress Development</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="Content_Creater.html"
+                                        class="offcanvas__sub_menu_item">Content Creater</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="seo.html"
+                                        class="offcanvas__sub_menu_item">Search Engine Optimization(SEO)</a></li>
+                            </ul>
+                        </li>
+                        <li class="offcanvas__menu_li"><a class="offcanvas__menu_item" href="about.html">About</a></li>
+                        <li class="offcanvas__menu_li"><a class="offcanvas__menu_item" href="contact.html">Contact</a>
                         </li>
                     </ul>
-                    <div class="offcanvas__account--items">
-                        <a class="offcanvas__account--items__btn d-flex align-items-center" href="login.html">
-                            <span class="offcanvas__account--items__icon">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="20.51" height="19.443"
-                                    viewBox="0 0 512 512">
-                                    <path
-                                        d="M344 144c-3.92 52.87-44 96-88 96s-84.15-43.12-88-96c-4-55 35-96 88-96s92 42 88 96z"
-                                        fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                                        stroke-width="32" />
-                                    <path
-                                        d="M256 304c-87 0-175.3 48-191.64 138.6C62.39 453.52 68.57 464 80 464h352c11.44 0 17.62-10.48 15.65-21.4C431.3 352 343 304 256 304z"
-                                        fill="none" stroke="currentColor" stroke-miterlimit="10" stroke-width="32" />
-                                </svg>
-                            </span>
-                            <span class="offcanvas__account--items__label">Login / Register</span>
-                        </a>
-                    </div>
                 </nav>
             </div>
         </div>
