--- a/project-details.html
+++ b/project-details.html
@@ -146,7 +146,7 @@
                                             <li class="headerarea__common__dropdown"><a
                                                     class="headerarea__has__dropdown" href="service.html">Services
                                                     <i class="icofont-long-arrow-down"></i></a>
-                                                    <ul
+                                                <ul
                                                     class="headerarea__submenu headerarea__submenu--five--wrap service-scrollbar">
 
                                                     <li><a href="webdevelopment.html">Web Development</a></li>
@@ -188,7 +188,7 @@
                             <div class="headerarea__component">
                                 <div class="headerarea__right">
 
-                                  
+
                                     <div class="headerarea__button">
                                         <a class="default__button" href="request.html">GET FREE QUATE</a>
                                     </div>
@@ -233,7 +233,7 @@
             <div class="offcanvas__inner">
                 <div class="offcanvas__logo">
                     <a class="offcanvas__logo_link" href="index.html">
-                        <img src="assets/img/logo/Logo_2.png" alt="Logo-img">
+                        <img src="assets/img/logo/icon.svg" alt="Logo-img">
                     </a>
                     <button class="offcanvas__close--btn" data-offcanvas>Close</button>
                 </div>
@@ -241,110 +241,6 @@
                     <ul class="offcanvas__menu_ul">
                         <li class="offcanvas__menu_li">
                             <a class="offcanvas__menu_item" href="index.html">Home</a>
-                            <ul class="offcanvas__sub_menu">
-                                <li class="offcanvas__sub_menu_li"><a href="#"
-                                        class="offcanvas__sub_menu_item">Multipages</a>
-                                    <ul class="offcanvas__sub_menu">
-                                        <li class="offcanvas__sub_menu_li"><a href="index.html"
-                                                class="offcanvas__sub_menu_item">Business Consulting</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a href="home-2(marketing-consulting).html"
-                                                class="offcanvas__sub_menu_item">Marketing Consulting</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a href="home-3(corporate-business).html"
-                                                class="offcanvas__sub_menu_item">Corporate Business</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a href="home-4(digital-agency).html"
-                                                class="offcanvas__sub_menu_item">Digital Agency</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a href="home-5(finance-consulting).html"
-                                                class="offcanvas__sub_menu_item">Finance Consulting</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a href="home-6(insurance).html"
-                                                class="offcanvas__sub_menu_item">Insurance</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a href="home-7(human-resorce).html"
-                                                class="offcanvas__sub_menu_item">Human Resource</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a href="home-8(creative-agency).html"
-                                                class="offcanvas__sub_menu_item">Creative Agency</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a href="home-9(ecommerce).html"
-                                                class="offcanvas__sub_menu_item">eCommerce</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a href="home-10(personal-portfolio).html"
-                                                class="offcanvas__sub_menu_item">Personal Portfolio</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a href="home-11(seo-agency).html"
-                                                class="offcanvas__sub_menu_item">SEO Agency</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a href="home-12(creative-portfolio).html"
-                                                class="offcanvas__sub_menu_item">Creative Portfolio</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a href="home-13(event-conference).html"
-                                                class="offcanvas__sub_menu_item">Event Conference</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a href="home-14(sass-app).html"
-                                                class="offcanvas__sub_menu_item">Sass App</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a href="home-15(freelancer).html"
-                                                class="offcanvas__sub_menu_item">Freelancer</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a href="home-16(technology).html"
-                                                class="offcanvas__sub_menu_item">Technology</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a href="home-17(web-agency).html"
-                                                class="offcanvas__sub_menu_item">Web Agency</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a href="home-18(travel-agency).html"
-                                                class="offcanvas__sub_menu_item">Travel Agency</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a
-                                                href="home-19(international-consulting).html"
-                                                class="offcanvas__sub_menu_item">International Consulting</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a href="home-20(startup).html"
-                                                class="offcanvas__sub_menu_item">Startup</a></li>
-                                    </ul>
-                                </li>
-
-
-                                <li class="offcanvas__sub_menu_li"><a href="#"
-                                        class="offcanvas__sub_menu_item">Onepage</a>
-                                    <ul class="offcanvas__sub_menu">
-                                        <li class="offcanvas__sub_menu_li"><a href="index-onepage.html"
-                                                class="offcanvas__sub_menu_item">Business Consulting</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a
-                                                href="home-2(marketing-consulting)-onepage.html"
-                                                class="offcanvas__sub_menu_item">Marketing Consulting</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a
-                                                href="home-3(corporate-business)-onepage.html"
-                                                class="offcanvas__sub_menu_item">Corporate Business</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a href="home-4(digital-agency)-onepage.html"
-                                                class="offcanvas__sub_menu_item">Digital Agency</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a
-                                                href="home-5(finance-consulting)-onepage.html"
-                                                class="offcanvas__sub_menu_item">Finance Consulting</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a href="home-6(insurance)-onepage.html"
-                                                class="offcanvas__sub_menu_item">Insurance</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a href="home-7(human-resorce)-onepage.html"
-                                                class="offcanvas__sub_menu_item">Human Resource</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a
-                                                href="home-8(creative-agency)-onepage.html"
-                                                class="offcanvas__sub_menu_item">Creative Agency</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a href="home-9(ecommerce)-onepage.html"
-                                                class="offcanvas__sub_menu_item">eCommerce</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a
-                                                href="home-10(personal-portfolio)-onepage.html"
-                                                class="offcanvas__sub_menu_item">Personal Portfolio</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a href="home-11(seo-agency)-onepage.html"
-                                                class="offcanvas__sub_menu_item">SEO Agency</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a
-                                                href="home-12(creative-portfolio)-onepage.html"
-                                                class="offcanvas__sub_menu_item">Creative Portfolio</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a
-                                                href="home-13(event-conference)-onepage.html"
-                                                class="offcanvas__sub_menu_item">Event Conference</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a href="home-14(sass-app)-onepage.html"
-                                                class="offcanvas__sub_menu_item">Sass App</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a href="home-15(freelancer)-onepage.html"
-                                                class="offcanvas__sub_menu_item">Freelancer</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a href="home-16(technology)-onepage.html"
-                                                class="offcanvas__sub_menu_item">Technology</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a href="home-17(web-agency)-onepage.html"
-                                                class="offcanvas__sub_menu_item">Web Agency</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a href="home-18(travel-agency)-onepage.html"
-                                                class="offcanvas__sub_menu_item">Travel Agency</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a
-                                                href="home-19(international-consulting)-onepage.html"
-                                                class="offcanvas__sub_menu_item">International Consulting</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a href="home-20(startup).html"
-                                                class="offcanvas__sub_menu_item">Startup</a></li>
-                                    </ul>
-                                </li>
-
-                            </ul>
                         </li>
                         <li class="offcanvas__menu_li">
                             <a class="offcanvas__menu_item" href="#">Pages</a>
@@ -357,66 +253,37 @@
                                         class="offcanvas__sub_menu_item">Projects</a></li>
                                 <li class="offcanvas__sub_menu_li"><a href="project-details.html"
                                         class="offcanvas__sub_menu_item">Project Details</a></li>
-                                <li class="offcanvas__sub_menu_li"><a href="service.html"
-                                        class="offcanvas__sub_menu_item">Service</a></li>
-                                <li class="offcanvas__sub_menu_li"><a href="service-details.html"
-                                        class="offcanvas__sub_menu_item">Service Details</a></li>
-                                <li class="offcanvas__sub_menu_li"><a href="service-details.html"
-                                        class="offcanvas__sub_menu_item">Service Details</a></li>
-                                <li class="offcanvas__sub_menu_li"><a href="team.html"
-                                        class="offcanvas__sub_menu_item">Team</a></li>
-                                <li class="offcanvas__sub_menu_li"><a href="team-details.html"
-                                        class="offcanvas__sub_menu_item">Team Details</a></li>
-                                <li class="offcanvas__sub_menu_li"><a href="team-details.html"
-                                        class="offcanvas__sub_menu_item">Team Details</a></li>
-                                <li class="offcanvas__sub_menu_li"><a href="faq.html"
-                                        class="offcanvas__sub_menu_item">FAQ</a></li>
-                                <li class="offcanvas__sub_menu_li"><a href="error.html"
-                                        class="offcanvas__sub_menu_item">Error 404</a></li>
-                                <li class="offcanvas__sub_menu_li"><a href="login.html"
-                                        class="offcanvas__sub_menu_item">Login</a></li>
                             </ul>
                         </li>
                         <li class="offcanvas__menu_li">
-                            <a class="offcanvas__menu_item" href="home-9(ecommerce).html">eCommerce</a>
+                            <a class="offcanvas__menu_item" href="service.html">Services</a>
                             <ul class="offcanvas__sub_menu">
-                                <li class="offcanvas__sub_menu_li"><a href="shop.html"
-                                        class="offcanvas__sub_menu_item">Shop</a></li>
-                                <li class="offcanvas__sub_menu_li"><a href="product-details.html"
-                                        class="offcanvas__sub_menu_item">Product Details</a></li>
-                                <li class="offcanvas__sub_menu_li"><a href="shop-2-column.html"
-                                        class="offcanvas__sub_menu_item">Shop 2 Column</a></li>
-                                <li class="offcanvas__sub_menu_li"><a href="shop-4-column.html"
-                                        class="offcanvas__sub_menu_item">Shop 4 Column</a></li>
-                                <li class="offcanvas__sub_menu_li"><a href="cart.html"
-                                        class="offcanvas__sub_menu_item">Cart</a></li>
-                                <li class="offcanvas__sub_menu_li"><a href="checkout.html"
-                                        class="offcanvas__sub_menu_item">Checkout</a></li>
-                                <li class="offcanvas__sub_menu_li"><a href="wishlist.html"
-                                        class="offcanvas__sub_menu_item">Wishlist</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="webdevelopment.html"
+                                        class="offcanvas__sub_menu_item">Web Development</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="software.html"
+                                        class="offcanvas__sub_menu_item">Software Development</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="appdevelop.html"
+                                        class="offcanvas__sub_menu_item">App Development</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="GameDevelop.html"
+                                        class="offcanvas__sub_menu_item">Game Development</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="digtalmarketing.html"
+                                        class="offcanvas__sub_menu_item">Digtal Marketing</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="uidesign.html"
+                                        class="offcanvas__sub_menu_item">UI/UX Designer</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="itexpert.html"
+                                        class="offcanvas__sub_menu_item">IT Specialist</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="wordpress.html"
+                                        class="offcanvas__sub_menu_item">WordPress Development</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="Content_Creater.html"
+                                        class="offcanvas__sub_menu_item">Content Creater</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="seo.html"
+                                        class="offcanvas__sub_menu_item">Search Engine Optimization(SEO)</a></li>
                             </ul>
                         </li>
                         <li class="offcanvas__menu_li"><a class="offcanvas__menu_item" href="about.html">About</a></li>
                         <li class="offcanvas__menu_li"><a class="offcanvas__menu_item" href="contact.html">Contact</a>
                         </li>
                     </ul>
-                    <div class="offcanvas__account--items">
-                        <a class="offcanvas__account--items__btn d-flex align-items-center" href="login.html">
-                            <span class="offcanvas__account--items__icon">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="20.51" height="19.443"
-                                    viewBox="0 0 512 512">
-                                    <path
-                                        d="M344 144c-3.92 52.87-44 96-88 96s-84.15-43.12-88-96c-4-55 35-96 88-96s92 42 88 96z"
-                                        fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                                        stroke-width="32" />
-                                    <path
-                                        d="M256 304c-87 0-175.3 48-191.64 138.6C62.39 453.52 68.57 464 80 464h352c11.44 0 17.62-10.48 15.65-21.4C431.3 352 343 304 256 304z"
-                                        fill="none" stroke="currentColor" stroke-miterlimit="10" stroke-width="32" />
-                                </svg>
-                            </span>
-                            <span class="offcanvas__account--items__label">Login / Register</span>
-                        </a>
-                    </div>
                 </nav>
             </div>
         </div>
@@ -845,8 +712,7 @@
                         <a href="index.html">
 
                             <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
-                            <img class="bbb__icon" src="assets/img/logo/logo/icon.svg"
-                                alt="Footer icon badge">
+                            <img class="bbb__icon" src="assets/img/logo/logo/icon.svg" alt="Footer icon badge">
                         </a>
                     </div>
                 </div>
