--- a/request.html
+++ b/request.html
@@ -133,9 +133,10 @@
         } 
     </script>
 </head>
-<!-- Dark/Light area end -->
-<main class="main_wrapper overflow-hidden">
-    <header>
+
+<body>
+    <!-- Dark/Light area end -->
+    <main class="main_wrapper overflow-hidden">
         <!-- animation  -->
         <div class="header__animate bg__black">
             <div class="container-fluid">
@@ -184,110 +185,174 @@
                 </div>
             </div>
         </div>
-        <div class="headerarea headerarea--1 headerarea__transparent header__sticky main__header ">
-            <div class="container desktop__menu__wrapper">
-                <div class="headerarea__main__wrapper position-relative">
+        <header>
+            <div class="headerarea headerarea--1 headerarea__transparent header__sticky main__header ">
+                <div class="container desktop__menu__wrapper">
+                    <div class="headerarea__main__wrapper position-relative">
 
-                    <div class="headerarea__component__wrap">
-                        <div class="headerarea__component">
-                            <div class="headerarea__logo">
-                                <a href="index.html"><img src="assets/img/logo/full-logo.svg" alt="Bastun Logo"></a>
+                        <div class="headerarea__component__wrap">
+                            <div class="headerarea__component">
+                                <div class="headerarea__logo">
+                                    <a href="index.html"><img src="assets/img/logo/full-logo.svg" alt="Bastun Logo"></a>
+                                </div>
                             </div>
-                        </div>
-                        <div class="headerarea__component">
-                            <div class="headerarea__main__menu">
-                                <nav>
-                                    <ul>
-                                        <li class="headerarea__common__dropdown headerarea__mega__menu position-static">
-                                            <a class="headerarea__has__dropdown" href="index.html">HOME
-                                            </a>
+                            <div class="headerarea__component">
+                                <div class="headerarea__main__menu">
+                                    <nav>
+                                        <ul>
+                                            <li
+                                                class="headerarea__common__dropdown headerarea__mega__menu position-static">
+                                                <a class="headerarea__has__dropdown" href="index.html">HOME
+                                                </a>
 
 
-                                        </li>
+                                            </li>
 
-                                        <li class="headerarea__common__dropdown"><a class="headerarea__has__dropdown"
-                                                href="service.html">Services
-                                                <i class="icofont-long-arrow-down"></i></a>
-                                            <ul
-                                                class="headerarea__submenu headerarea__submenu--five--wrap service-scrollbar">
+                                            <li class="headerarea__common__dropdown"><a
+                                                    class="headerarea__has__dropdown" href="service.html">Services
+                                                    <i class="icofont-long-arrow-down"></i></a>
+                                                <ul
+                                                    class="headerarea__submenu service-scrollbar">
 
-                                                <li><a href="webdevelopment.html">Web Development</a></li>
-                                                <li><a href="software.html">Software Development</a></li>
-                                                <li><a href="appdevelop.html">App Development</a></li>
-                                                <li><a href="GameDevelop.html">Game Development</a></li>
-                                                <li><a href="digtalmarketing.html">Digital Marketing</a></li>
-                                                <li><a href="uidesign.html">UI/UX Design</a></li>
-                                                <li><a href="itexpert.html">IT Specialist</a></li>
-                                                <li><a href="wordpress.html">WordPress Development </a></li>
-                                                <li><a href="Content_Creater.html">Content Creator</a></li>
-                                                <li><a href="seo.html">Search Engine Optimization(SEO)</a></li>
+                                                    <li><a href="webdevelopment.html">Web Development</a></li>
+                                                    <li><a href="software.html">Software Development</a></li>
+                                                    <li><a href="appdevelop.html">App Development</a></li>
+                                                    <li><a href="GameDevelop.html">Game Development</a></li>
+                                                    <li><a href="digtalmarketing.html">Digital Marketing</a></li>
+                                                    <li><a href="uidesign.html">UI/UX Design</a></li>
+                                                    <li><a href="itexpert.html">IT Specialist</a></li>
+                                                    <li><a href="wordpress.html">WordPress Development </a></li>
+                                                    <li><a href="Content_Creater.html">Content Creator</a></li>
+                                                    <li><a href="seo.html">Search Engine Optimization(SEO)</a></li>
 
-                                            </ul>
+                                                </ul>
 
-                                        </li>
+                                            </li>
 
-                                        <li><a href="#">Careers </a></li>
-                                        <li><a href="blog.html">BLOG </a></li>
-                                        <li><a href="team.html">Team </a></li>
+                                            <li><a href="#">Careers </a></li>
+                                            <li><a href="blog.html">BLOG </a></li>
+                                            <li><a href="team.html">Team </a></li>
 
-                                        <li class="headerarea__common__dropdown"><a class="headerarea__has__dropdown"
-                                                href="contact.html">CONTACT
-                                                <i class="icofont-long-arrow-down"></i></a>
-                                            <ul class="headerarea__submenu headerarea__submenu--five--wrap">
+                                            <li class="headerarea__common__dropdown"><a
+                                                    class="headerarea__has__dropdown" href="contact.html">CONTACT
+                                                    <i class="icofont-long-arrow-down"></i></a>
+                                                <ul class="headerarea__submenu">
 
-                                                <li><a href="about.html">ABOUT </a></li>
-                                                <li><a href="project.html">Portfolio </a></li>
+                                                    <li><a href="about.html">ABOUT </a></li>
+                                                    <li><a href="project.html">Portfolio </a></li>
 
-                                            </ul>
+                                                </ul>
 
-                                        </li>
+                                            </li>
 
+                                </div>
+
+                                </ul>
+                                </nav>
                             </div>
-
-                            </ul>
-                            </nav>
-                        </div>
-                        <div class="headerarea__component">
-                            <div class="headerarea__right">
-                                <div class="headerarea__button">
-                                    <a class="default__button" href="request.html">GET FREE QUATE</a>
+                            <div class="headerarea__component">
+                                <div class="headerarea__right">
+                                    <div class="headerarea__button">
+                                        <a class="default__button" href="request.html">GET FREE QUATE</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="mob_menu_wrapper container-fluid">
+                <div class="d-flex justify-content-between align-items-center">
+                    <div class="offcanvas__header--menu__open ">
+                        <a class="offcanvas__header--menu__open--btn" href="javascript:void(0)" data-offcanvas>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="ionicon offcanvas__header--menu__open--svg"
+                                viewBox="0 0 512 512">
+                                <path fill="currentColor" stroke="currentColor" stroke-linecap="round"
+                                    stroke-miterlimit="10" stroke-width="32" d="M80 160h352M80 256h352M80 352h352" />
+                            </svg>
+                            <span class="visually-hidden">Offcanvas Menu Open</span>
+                        </a>
+                    </div>
+                    <div class="mobile__log">
+                        <div class="mobile__log--title"><a class="mobile__log--link" href="index.html">
+                                <img class="mobile__log--img" src="assets/img/logo/full-logo.svg" alt="logo-img">
+                            </a></div>
                     </div>
 
+
+
                 </div>
             </div>
-        </div>
 
-        <div class="mob_menu_wrapper container-fluid">
-            <div class="d-flex justify-content-between align-items-center">
-                <div class="offcanvas__header--menu__open ">
-                    <a class="offcanvas__header--menu__open--btn" href="javascript:void(0)" data-offcanvas>
-                        <svg xmlns="http://www.w3.org/2000/svg" class="ionicon offcanvas__header--menu__open--svg"
-                            viewBox="0 0 512 512">
-                            <path fill="currentColor" stroke="currentColor" stroke-linecap="round"
-                                stroke-miterlimit="10" stroke-width="32" d="M80 160h352M80 256h352M80 352h352" />
-                        </svg>
-                        <span class="visually-hidden">Offcanvas Menu Open</span>
+            </div>
+        </header>
+        <!-- header start -->
+
+
+        <!-- Start Offcanvas header menu -->
+        <div class="offcanvas__header">
+            <div class="offcanvas__inner">
+                <div class="offcanvas__logo">
+                    <a class="offcanvas__logo_link" href="index.html">
+                        <img src="assets/img/logo/icon.svg" alt="Logo-img">
                     </a>
+                    <button class="offcanvas__close--btn" data-offcanvas>Close</button>
                 </div>
-                <div class="mobile__log">
-                    <div class="mobile__log--title"><a class="mobile__log--link" href="index.html">
-                            <img class="mobile__log--img" src="assets/img/logo/full-logo.svg" alt="logo-img">
-                        </a></div>
-                </div>
-
-
-
+                <nav class="offcanvas__menu">
+                    <ul class="offcanvas__menu_ul">
+                        <li class="offcanvas__menu_li">
+                            <a class="offcanvas__menu_item" href="index.html">Home</a>
+                        </li>
+                        <li class="offcanvas__menu_li">
+                            <a class="offcanvas__menu_item" href="#">Pages</a>
+                            <ul class="offcanvas__sub_menu">
+                                <li class="offcanvas__sub_menu_li"><a href="blog.html"
+                                        class="offcanvas__sub_menu_item">Blog</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="blog-details.html"
+                                        class="offcanvas__sub_menu_item">Blog Details</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="project.html"
+                                        class="offcanvas__sub_menu_item">Projects</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="project-details.html"
+                                        class="offcanvas__sub_menu_item">Project Details</a></li>
+                            </ul>
+                        </li>
+                        <li class="offcanvas__menu_li">
+                            <a class="offcanvas__menu_item" href="service.html">Services</a>
+                            <ul class="offcanvas__sub_menu">
+                                <li class="offcanvas__sub_menu_li"><a href="webdevelopment.html"
+                                        class="offcanvas__sub_menu_item">Web Development</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="software.html"
+                                        class="offcanvas__sub_menu_item">Software Development</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="appdevelop.html"
+                                        class="offcanvas__sub_menu_item">App Development</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="GameDevelop.html"
+                                        class="offcanvas__sub_menu_item">Game Development</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="digtalmarketing.html"
+                                        class="offcanvas__sub_menu_item">Digtal Marketing</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="uidesign.html"
+                                        class="offcanvas__sub_menu_item">UI/UX Designer</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="itexpert.html"
+                                        class="offcanvas__sub_menu_item">IT Specialist</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="wordpress.html"
+                                        class="offcanvas__sub_menu_item">WordPress Development</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="Content_Creater.html"
+                                        class="offcanvas__sub_menu_item">Content Creater</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="seo.html"
+                                        class="offcanvas__sub_menu_item">Search Engine Optimization(SEO)</a></li>
+                            </ul>
+                        </li>
+                        <li class="offcanvas__menu_li"><a class="offcanvas__menu_item" href="about.html">About</a></li>
+                        <li class="offcanvas__menu_li"><a class="offcanvas__menu_item" href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
         </div>
+    </main>
 
-        </div>
-    </header>
-</main>
 
-<body>
     <div class="page__banner">
         <div class="page__banner-shape">
             <img src="assets/img/brand/page-banner-shape.png" alt="image">
@@ -346,7 +411,7 @@
                             </div>
 
                         </div>
-                    
+
                     </div>
                 </form>
             </div>
