--- a/service-sample.html
+++ b/service-sample.html
@@ -4,53 +4,23 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Landing Page - Digital Minds On</title>
-    <meta name="description" content="Digitalminds on">
+    <title>About | Digital Minds on- Business Consulting HTML Template</title>
+    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
     <!-- Place favicon.ico in the root directory -->
+
     <!-- CSS here -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css ">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/aos.min.css">
     <link rel="stylesheet" href="assets/css/icofont.min.css">
     <link rel="stylesheet" href="assets/css/glightbox.min.css">
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
-    <style>
-        .banner-section {
-            background-image: url('/assets/img/herobaner/herobanner__1.jpg');
-            padding: 50px 0;
-            position: relative;
-        }
 
-        .banner-content {
-            max-width: 600px;
-        }
 
-        .banner-heading {
-            font-size: 2.5rem;
-            font-weight: bold;
-            margin-bottom: 20px;
-        }
-
-        .banner-text {
-            font-size: 1.1rem;
-            margin-bottom: 20px;
-        }
-
-        .btn-custom {
-            margin-right: 15px;
-        }
-
-        .banner-image {
-            position: absolute;
-            top: 10%;
-            right: 0;
-            max-width: 45%;
-        }
-    </style>
 
     <script>
         // On page load or when changing themes, best to add inline in `head` to avoid FOUC
@@ -64,6 +34,7 @@
 
 </head>
 
+
 <body class="body__wrapper">
     <!-- pre loader area start -->
     <div id="back__preloader">
@@ -73,6 +44,8 @@
         </div>
     </div>
     <!-- pre loader area end -->
+
+
     <!-- Dark/Light area start -->
     <div class="mode_switcher my_switcher">
         <button id="light--to-dark-button" class="light align-items-center">
@@ -95,31 +68,18 @@
         </button>
     </div>
     <!-- Dark/Light area end -->
+
     <main class="main_wrapper overflow-hidden">
         <!-- animation  -->
         <div class="header__animate bg__black">
             <div class="container-fluid">
                 <div class="header__animate__wraper">
+
                     <div class="header__animate__item">
                         <i class="icofont-phone"></i>
                         <h3><a href="tel:(+92)3086582833">+92 3086582833</a></h3>
                     </div>
-                    <div class="header__animate__item">
-                        <i class="icofont-email"></i>
-                        <h3><a href="mailto:muhammedahmadraza72@gmail.com">muhammedahmadraza72@gmail.com</a></h3>
-                    </div>
-                    <div class="header__animate__item">
-                        <i class="icofont-phone"></i>
-                        <h3><a href="tel:(+92)3086582833">+92 3086582833</a></h3>
-                    </div>
-                    <div class="header__animate__item">
-                        <i class="icofont-email"></i>
-                        <h3><a href="mailto:muhammedahmadraza72@gmail.com">muhammedahmadraza72@gmail.com</a></h3>
-                    </div>
-                    <div class="header__animate__item">
-                        <i class="icofont-phone"></i>
-                        <h3><a href="tel:(+92)3086582833">+92 3086582833</a></h3>
-                    </div>
+
                     <div class="header__animate__item">
                         <i class="icofont-email"></i>
                         <h3><a href="mailto:muhammedahmadraza72@gmail.com">muhammedahmadraza72@gmail.com</a></h3>
@@ -137,6 +97,25 @@
                         <i class="icofont-phone"></i>
                         <h3><a href="tel:(+92)3086582833">+92 3086582833</a></h3>
                     </div>
+
+                    <div class="header__animate__item">
+                        <i class="icofont-email"></i>
+                        <h3><a href="mailto:muhammedahmadraza72@gmail.com">muhammedahmadraza72@gmail.com</a></h3>
+                    </div>
+                    <div class="header__animate__item">
+                        <i class="icofont-phone"></i>
+                        <h3><a href="tel:(+92)3086582833">+92 3086582833</a></h3>
+                    </div>
+
+                    <div class="header__animate__item">
+                        <i class="icofont-email"></i>
+                        <h3><a href="mailto:muhammedahmadraza72@gmail.com">muhammedahmadraza72@gmail.com</a></h3>
+                    </div>
+                    <div class="header__animate__item">
+                        <i class="icofont-phone"></i>
+                        <h3><a href="tel:(+92)3086582833">+92 3086582833</a></h3>
+                    </div>
+
                     <div class="header__animate__item">
                         <i class="icofont-email"></i>
                         <h3><a href="mailto:muhammedahmadraza72@gmail.com">muhammedahmadraza72@gmail.com</a></h3>
@@ -144,6 +123,8 @@
                 </div>
             </div>
         </div>
+        <!-- animation end  -->
+        <!-- header start -->
         <header>
             <div class="headerarea headerarea--1 headerarea__transparent header__sticky main__header ">
                 <div class="container desktop__menu__wrapper">
@@ -211,8 +192,6 @@
                             </div>
                             <div class="headerarea__component">
                                 <div class="headerarea__right">
-
-                                  
                                     <div class="headerarea__button">
                                         <a class="default__button" href="request.html">GET FREE QUATE</a>
                                     </div>
@@ -249,6 +228,67 @@
 
             </div>
         </header>
+        <!-- header start -->
+        <!-- Start Offcanvas header menu -->
+        <div class="offcanvas__header">
+            <div class="offcanvas__inner">
+                <div class="offcanvas__logo">
+                    <a class="offcanvas__logo_link" href="index.html">
+                        <img src="assets/img/logo/icon.svg" alt="Logo-img">
+                    </a>
+                    <button class="offcanvas__close--btn" data-offcanvas>Close</button>
+                </div>
+                <nav class="offcanvas__menu">
+                    <ul class="offcanvas__menu_ul">
+                        <li class="offcanvas__menu_li">
+                            <a class="offcanvas__menu_item" href="index.html">Home</a>
+                        </li>
+                        <li class="offcanvas__menu_li">
+                            <a class="offcanvas__menu_item" href="#">Pages</a>
+                            <ul class="offcanvas__sub_menu">
+                                <li class="offcanvas__sub_menu_li"><a href="blog.html"
+                                        class="offcanvas__sub_menu_item">Blog</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="blog-details.html"
+                                        class="offcanvas__sub_menu_item">Blog Details</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="project.html"
+                                        class="offcanvas__sub_menu_item">Projects</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="project-details.html"
+                                        class="offcanvas__sub_menu_item">Project Details</a></li>
+                            </ul>
+                        </li>
+                        <li class="offcanvas__menu_li">
+                            <a class="offcanvas__menu_item" href="service.html">Services</a>
+                            <ul class="offcanvas__sub_menu">
+                                <li class="offcanvas__sub_menu_li"><a href="webdevelopment.html"
+                                        class="offcanvas__sub_menu_item">Web Development</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="software.html"
+                                        class="offcanvas__sub_menu_item">Software Development</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="appdevelop.html"
+                                        class="offcanvas__sub_menu_item">App Development</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="GameDevelop.html"
+                                        class="offcanvas__sub_menu_item">Game Development</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="digtalmarketing.html"
+                                        class="offcanvas__sub_menu_item">Digtal Marketing</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="uidesign.html"
+                                        class="offcanvas__sub_menu_item">UI/UX Designer</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="itexpert.html"
+                                        class="offcanvas__sub_menu_item">IT Specialist</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="wordpress.html"
+                                        class="offcanvas__sub_menu_item">WordPress Development</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="Content_Creater.html"
+                                        class="offcanvas__sub_menu_item">Content Creater</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="seo.html"
+                                        class="offcanvas__sub_menu_item">Search Engine Optimization(SEO)</a></li>
+                            </ul>
+                        </li>
+                        <li class="offcanvas__menu_li"><a class="offcanvas__menu_item" href="about.html">About</a></li>
+                        <li class="offcanvas__menu_li"><a class="offcanvas__menu_item" href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <!-- End Offcanvas header menu -->
         <!-- banner -->
         <section class="banner-section">
             <div class="container">
